main 광고팝업 추가

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -70,16 +70,16 @@
 				</li>
 			</ul>
 			<ul class="fnb">
-				<li><a href="#">개인정보처리방침</a></li>
+				<li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
 				<li><a href="#">홈페이지이용약관</a></li>
 				<li><a href="#">이메일무단수집거부</a></li>
-				<li><a href="#">중요정보고시</a></li>
-				<li><a href="#">부가서비스</a></li>
+				<li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
+				<li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
 			</ul>
 		</nav>
 		<ul class="util">
 			<li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-			<li><a class="info-link" href="">e하늘 장사정보</a></li>
+			<li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
 		</ul>
 	</header>
 
@@ -148,23 +148,26 @@
 					</div>
 					<div class="slick-slide">
 						<div class="con-wrap">
-							<img src="../../assets/images/visual/main-slide-copy2.png" alt="가장 정직한 회사 노잣돈 / 수고비 절대 받지 않습니다. 후불계 업계 최고 5대 품질 보증제 실시">
+							<img src="../../assets/images/visual/main-slide-copy2.png" alt="가장 정직한 회사 노잣돈/수고비 절대 받지 않습니다. 후불제 업계 최고 5대 품질 보증제 시행">
 							<img src="../../assets/images/visual/main-slide-obj2.png" alt="2018 아시아 경제 올해의 희트상품, 2016 중소기업 품질경영대상, 2015 대한민국 소비자대상수상, 2015 한국품질 경영 우수기업 장례문화부분 선정, 독거노인 사랑잇기 사회공헌 2012, 한국을 빛낸 경영혁신 우수기업 선정 2012, 사회적 책임을 다하는 기업선정 2012, 대한민국 경제리더 대상수상 2012">
 						</div>
 					</div>
 					<div class="slick-slide">
 						<div class="con-wrap">
-							<img src="../../assets/images/visual/main-slide-copy3.png" alt="가장 경제적인 회사 메뉴판 서비스로 30% 이상 식사비 절감">
-							<img src="../../assets/images/visual/main-slide-obj3.png" alt="메뉴 [1.커피, 음료 2.주류 3.다과류 4.식사류 5.풀세트]">
+							<img src="../../assets/images/visual/main-slide-copy3.png" alt="가장 믿을만한 회사 고객은 거짓말을 하지 않습니다. VIP 및 단체장과 250여개 기업으로부터 인정받은 최고의 의전품질">
+							<img src="../../assets/images/visual/main-slide-obj4.png" alt="">
 						</div>
 					</div>
 					<div class="slick-slide">
 						<div class="con-wrap">
-							<img src="../../assets/images/visual/main-slide-copy4.png" alt="가장 믿을만한 회사 고객은 거짓말을 하지 않습니다. VIP 및 단체장과 250여개 기업으로부터 인정받은 최고의 의전품질">
-							<img src="../../assets/images/visual/main-slide-obj4.png" alt="">
+							<img src="../../assets/images/visual/main-slide-copy4.png" alt="가장 착한 회사 메뉴판 서비스로 30%이상 장례비용 절감 후불제 업계 최초 메뉴판 서비스 시행으로 식사비용 대폭 절감">
+							<img src="../../assets/images/visual/main-slide-obj3.png" alt="메뉴 [1.커피, 음료 2.주류 3.다과류 4.식사류 5.풀세트]">
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="con-wrap download-btn-wrap">
+				<a class="btn-download" href="#">e효담상품보기</a>
 			</div>
 			<div class="customer-list con-wrap">
 				<div class="slick-container">
@@ -185,16 +188,23 @@
 			<div class="achievements-list con-wrap">
 				<ul class="">
 					<li>
-						<img src="../../assets/images/icon/icon-main-achievements1.png" alt="">
-						<span><em>2012년 2월 업계 최초</em><br /><strong>5대 품질 보증제 시행</strong></span>
+						<a href="#">
+							<img src="../../assets/images/icon/icon-main-achievements1.png" alt="">
+							<span><em>2012년 2월 업계 최초</em><br /><strong>5대 품질 보증제 시행</strong></span>
+						</a>
 					</li>
 					<li>
 						<img src="../../assets/images/icon/icon-main-achievements2.png" alt="">
-						<span><em>2019년 의전수행</em><br /><strong>7,930<em>회</em></strong></span>
+						<div class="js-cross-view">
+							<span><em>전체의전수행</em><br /><strong>37,270<em>회</em></strong></span>
+							<span><em>패키지장례수행</em><br /><strong>11,381<em>회</em></strong></span>
+						</div>
 					</li>
 					<li>
-						<img src="../../assets/images/icon/icon-main-achievements3.png" alt="">
-						<span><em>국가주요인물 / 사회저명인사</em><br /><strong>장례 수행 실적</strong></span>
+						<a href="sub-funeral-performance.html">
+							<img src="../../assets/images/icon/icon-main-achievements3.png" alt="">
+							<span><em>국가주요인물 / 사회저명인사</em><br /><strong>장례 수행 실적</strong></span>
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -215,7 +225,7 @@
 					</li>
 					<li>
 						<a href="">
-							<h4><em>알뜰한 실속 장례</em><strong>e효담149</strong></h4>
+							<h4><em>알뜰한 실속 장례</em><strong>e효담139</strong></h4>
 							<p>자세히보기</p>
 						</a>
 					</li>
@@ -540,11 +550,11 @@
 
 	<footer class="footer">
 		<ul class="footer-util">
-			<li><a href="">개인정보처리방침</a></li>
-			<li><a href="">홈페이지이용약관</a></li>
-			<li><a href="">이메일무단수집거부</a></li>
-			<li><a href="">중요정보고시</a></li>
-			<li><a href="">부가서비스</a></li>
+			<li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
+			<li><a href="#">홈페이지이용약관</a></li>
+			<li><a href="#">이메일무단수집거부</a></li>
+			<li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
+			<li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
 		</ul>
 		<div class="footer-address">
 			<div class="logo">
@@ -614,6 +624,32 @@
 			</div>
 		</div>
 	</aside>
+	<div class="main-pop-wrap">
+		<div class="main-pop">
+			<a href="">
+				<img src="../../assets/images/visual/main-pop01.png" alt="효담상조 코로나19 예방수칙 대한민국 상조의 기준 효담상조는 코로나19 사전 예방을 위하여 아래와 같이 철저한 예방수칙을 시행하고 있습니다. [마스크 착용 의무화/손소독제 비치/방문자 발열체크/임직원 일일 2회 발열체크/의전행사 차랑 방역(소독) 실시/행사 시 위생 장갑 마스크 착용 의무화/국내외 출장 및 교육 최소화] 효담상조의 모든 행사 진행시 고객님의 안전을 위하여 마스크 착용을 의무화 하고 있습니다. 고객 여러분의 안전과 건강을 위하여 최선을 다하겠습니다." />
+			</a>
+			<div class="bottom-wrap">
+				<div class="chk-wrap">
+					<input type="checkbox" id="today-chk01" />
+					<label for="today-chk01">오늘하루 보지 않기 / 닫기</label>
+				</div>
+				<button class="btn-close" type="button">닫기</button>
+			</div>
+		</div>
+		<div class="main-pop">
+			<a href="">
+				<img src="../../assets/images/visual/main-pop02.png" alt="e효담 무료 가입 고객만을 위한 특별한 혜택 서비스 event [호텔 펜션등 국내,외 숙박시설 최대 60%할인/디지털제품 및 가전과 건강식품 최대 30%할인/기차 예매 최대 35%할인/사전장례 무료 컨설팅 레포트 제공/장례 서비스 이용시 15만원 할인권 제공/장례서비스 이용시 고인 이송 앰뷸런스 무료제공/장례서비스 이용시 영정사진 무료제작]" />
+			</a>
+			<div class="bottom-wrap">
+				<div class="chk-wrap">
+					<input type="checkbox" id="today-chk02" />
+					<label for="today-chk02">오늘하루 보지 않기 / 닫기</label>
+				</div>
+				<button class="btn-close" type="button">닫기</button>
+			</div>
+		</div>
+	</div>
 	<script src="../js/common.js"></script>
 	<script src="../js/main.js"></script>
 </body>
