--- a/src/html/sub-review-list.html
+++ b/src/html/sub-review-list.html
@@ -74,13 +74,13 @@
 				<li><a href="#">개인정보처리방침</a></li>
 				<li><a href="#">홈페이지이용약관</a></li>
 				<li><a href="#">이메일무단수집거부</a></li>
-				<li><a href="#">중요정보고시</a></li>
-				<li><a href="#">부가서비스</a></li>
+				<li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
+				<li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
 			</ul>
 		</nav>
 		<ul class="util">
 			<li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-			<li><a class="info-link" href="">e하늘 장사정보</a></li>
+			<li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
 		</ul>
 	</header>
 
