--- a/src/html/sub-product.html
+++ b/src/html/sub-product.html
@@ -372,6 +372,11 @@
                         <dd>
                             <table class="th-col-table">
                                 <caption class="blind">관, 수의, 유골함, 입관/빈소용품 : e효담90, e효담139 상품별 안내</caption>
+                                <colgroup>
+                                    <col style="width: 200px;">
+                                    <col style="width: calc(50% - 100px);">
+                                    <col style="width: calc(50% - 100px);">
+                                </colgroup>
                                 <thead>
                                     <tr>
                                         <th scope="col">구분</th>
@@ -410,6 +415,11 @@
                         <dd>
                             <table class="th-col-table">
                                 <caption class="blind">1급장례의전팀장, 장례예식사, 문상객도우미 : e효담90, e효담139 상품별 안내</caption>
+                                <colgroup>
+                                    <col style="width: 200px;">
+                                    <col style="width: calc(50% - 100px);">
+                                    <col style="width: calc(50% - 100px);">
+                                </colgroup>
                                 <thead>
                                     <tr>
                                         <th scope="col">구분</th>
@@ -443,6 +453,11 @@
                         <dd>
                             <table class="th-col-table">
                                 <caption class="blind">남자상복, 여자상복 : e효담90, e효담139 상품별 안내</caption>
+                                <colgroup>
+                                    <col style="width: 200px;">
+                                    <col style="width: calc(50% - 100px);">
+                                    <col style="width: calc(50% - 100px);">
+                                </colgroup>
                                 <thead>
                                     <tr>
                                         <th scope="col">구분</th>
@@ -471,6 +486,11 @@
                         <dd>
                             <table class="th-col-table">
                                 <caption class="blind">문상객용버스, 고인전용리무진, 앰뷸런스 : e효담90, e효담139 상품별 안내</caption>
+                                <colgroup>
+                                    <col style="width: 200px;">
+                                    <col style="width: calc(50% - 100px);">
+                                    <col style="width: calc(50% - 100px);">
+                                </colgroup>
                                 <thead>
                                     <tr>
                                         <th scope="col">구분</th>
@@ -499,6 +519,11 @@
                         <dd>
                             <table class="th-col-table">
                                 <caption class="blind">운구 인원, 입관 꽃장식, 고인 메이크업 : e효담90, e효담139 상품별 안내</caption>
+                                <colgroup>
+                                    <col style="width: 200px;">
+                                    <col style="width: calc(50% - 100px);">
+                                    <col style="width: calc(50% - 100px);">
+                                </colgroup>
                                 <thead>
                                     <tr>
                                         <th scope="col">구분</th>
@@ -532,6 +557,11 @@
                         <dd>
                             <table class="th-col-table">
                                 <caption class="blind">빈소할인 : e효담90, e효담139 상품별 안내</caption>
+                                <colgroup>
+                                    <col style="width: 200px;">
+                                    <col style="width: calc(50% - 100px);">
+                                    <col style="width: calc(50% - 100px);">
+                                </colgroup>
                                 <thead>
                                     <tr>
                                         <th scope="col">구분</th>
