광고팝업 모바일 슬라이드 추가

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -625,28 +625,30 @@
 		</div>
 	</aside>
 	<div class="main-pop-wrap">
-		<div class="main-pop">
-			<a href="">
-				<img src="../../assets/images/visual/main-pop01.png" alt="효담상조 코로나19 예방수칙 대한민국 상조의 기준 효담상조는 코로나19 사전 예방을 위하여 아래와 같이 철저한 예방수칙을 시행하고 있습니다. [마스크 착용 의무화/손소독제 비치/방문자 발열체크/임직원 일일 2회 발열체크/의전행사 차랑 방역(소독) 실시/행사 시 위생 장갑 마스크 착용 의무화/국내외 출장 및 교육 최소화] 효담상조의 모든 행사 진행시 고객님의 안전을 위하여 마스크 착용을 의무화 하고 있습니다. 고객 여러분의 안전과 건강을 위하여 최선을 다하겠습니다." />
-			</a>
-			<div class="bottom-wrap">
-				<div class="chk-wrap">
-					<input type="checkbox" id="today-chk01" />
-					<label for="today-chk01">오늘하루 보지 않기 / 닫기</label>
+		<div class="slick-wrapper">
+			<div class="main-pop pop01">
+				<a href="">
+					<img src="../../assets/images/visual/main-pop01.png" alt="효담상조 코로나19 예방수칙 대한민국 상조의 기준 효담상조는 코로나19 사전 예방을 위하여 아래와 같이 철저한 예방수칙을 시행하고 있습니다. [마스크 착용 의무화/손소독제 비치/방문자 발열체크/임직원 일일 2회 발열체크/의전행사 차랑 방역(소독) 실시/행사 시 위생 장갑 마스크 착용 의무화/국내외 출장 및 교육 최소화] 효담상조의 모든 행사 진행시 고객님의 안전을 위하여 마스크 착용을 의무화 하고 있습니다. 고객 여러분의 안전과 건강을 위하여 최선을 다하겠습니다." />
+				</a>
+				<div class="bottom-wrap">
+					<div class="chk-wrap">
+						<input type="checkbox" id="today-chk01" />
+						<label for="today-chk01">오늘하루 보지 않기 / 닫기</label>
+					</div>
+					<button class="btn-close" type="button">닫기</button>
 				</div>
-				<button class="btn-close" type="button">닫기</button>
 			</div>
-		</div>
-		<div class="main-pop">
-			<a href="">
-				<img src="../../assets/images/visual/main-pop02.png" alt="e효담 무료 가입 고객만을 위한 특별한 혜택 서비스 event [호텔 펜션등 국내,외 숙박시설 최대 60%할인/디지털제품 및 가전과 건강식품 최대 30%할인/기차 예매 최대 35%할인/사전장례 무료 컨설팅 레포트 제공/장례 서비스 이용시 15만원 할인권 제공/장례서비스 이용시 고인 이송 앰뷸런스 무료제공/장례서비스 이용시 영정사진 무료제작]" />
-			</a>
-			<div class="bottom-wrap">
-				<div class="chk-wrap">
-					<input type="checkbox" id="today-chk02" />
-					<label for="today-chk02">오늘하루 보지 않기 / 닫기</label>
+			<div class="main-pop pop02">
+				<a href="">
+					<img src="../../assets/images/visual/main-pop02.png" alt="e효담 무료 가입 고객만을 위한 특별한 혜택 서비스 event [호텔 펜션등 국내,외 숙박시설 최대 60%할인/디지털제품 및 가전과 건강식품 최대 30%할인/기차 예매 최대 35%할인/사전장례 무료 컨설팅 레포트 제공/장례 서비스 이용시 15만원 할인권 제공/장례서비스 이용시 고인 이송 앰뷸런스 무료제공/장례서비스 이용시 영정사진 무료제작]" />
+				</a>
+				<div class="bottom-wrap">
+					<div class="chk-wrap">
+						<input type="checkbox" id="today-chk02" />
+						<label for="today-chk02">오늘하루 보지 않기 / 닫기</label>
+					</div>
+					<button class="btn-close" type="button">닫기</button>
 				</div>
-				<button class="btn-close" type="button">닫기</button>
 			</div>
 		</div>
 	</div>
