gnb 서브메뉴 조작 위해 클래스 추가 has-sub main-pop 이름 변경 today-pop

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -43,7 +43,7 @@
 		<nav class="gnb">
 			<ul class="gnb-top">
 				<li>
-					<a href="sub-introduce-greetings.html">회사소개</a>
+					<a class="has-sub" href="sub-introduce-greetings.html">회사소개</a>
 					<ul class="sub-depth">
 						<li><a href="sub-introduce-greetings.html">인사말</a></li>
 						<li><a href="sub-introduce-history.html">연혁</a></li>
@@ -59,7 +59,7 @@
 					<a href="sub-review-list.html">이용후기</a>
 				</li>
 				<li>
-					<a href="sub-funeral-search.html">장례정보</a>
+					<a class="has-sub" href="sub-funeral-search.html">장례정보</a>
 					<ul class="sub-depth">
 						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
@@ -194,10 +194,12 @@
 						</a>
 					</li>
 					<li>
-						<img src="../../assets/images/icon/icon-main-achievements2.png" alt="">
-						<div class="js-cross-view">
-							<span><em>전체의전수행</em><br /><strong>37,270<em>회</em></strong></span>
-							<span><em>패키지장례수행</em><br /><strong>11,381<em>회</em></strong></span>
+						<div>
+							<img src="../../assets/images/icon/icon-main-achievements2.png" alt="">
+							<div class="js-cross-view">
+								<span><em>전체의전수행</em><br /><strong>37,270<em>회</em></strong></span>
+								<span><em>패키지장례수행</em><br /><strong>11,381<em>회</em></strong></span>
+							</div>
 						</div>
 					</li>
 					<li>
@@ -341,31 +343,31 @@
 					<h3>간편하고 편리한 e효담상조만의 장례 서비스</h3>
 				</header>
 				<ol>
-					<li>
+					<li class="box01">
 						<dl>
 							<dt>장례접수</dt>
 							<dd>전화, 문자, 인터넷을 통해 접수</dd>
 						</dl>
 					</li>
-					<li>
+					<li class="box02">
 						<dl>
 							<dt>상담원 상담</dt>
 							<dd>365일 24시간 상황실 운영</dd>
 						</dl>
 					</li>
-					<li>
+					<li class="box03">
 						<dl>
 							<dt>장례지도사 출동</dt>
 							<dd>최장 3시간 내</dd>
 						</dl>
 					</li>	
-					<li>
+					<li class="box04">
 						<dl>
 							<dt>장례 절차 안내진행</dt>
 							<dd>장례 행정 안내</dd>
 						</dl>
 					</li>	
-					<li>
+					<li class="box05">
 						<dl>
 							<dt>발인전 결제</dt>
 							<dd></dd>
@@ -624,11 +626,11 @@
 			</div>
 		</div>
 	</aside>
-	<div class="main-pop-wrap">
+	<div class="today-pop-wrap">
 		<div class="slick-wrapper">
-			<div class="main-pop pop01">
+			<div class="today-pop pop01">
 				<a href="">
-					<img src="../../assets/images/visual/main-pop01.png" alt="효담상조 코로나19 예방수칙 대한민국 상조의 기준 효담상조는 코로나19 사전 예방을 위하여 아래와 같이 철저한 예방수칙을 시행하고 있습니다. [마스크 착용 의무화/손소독제 비치/방문자 발열체크/임직원 일일 2회 발열체크/의전행사 차랑 방역(소독) 실시/행사 시 위생 장갑 마스크 착용 의무화/국내외 출장 및 교육 최소화] 효담상조의 모든 행사 진행시 고객님의 안전을 위하여 마스크 착용을 의무화 하고 있습니다. 고객 여러분의 안전과 건강을 위하여 최선을 다하겠습니다." />
+					<img src="../../assets/images/visual/today-pop01.png" alt="효담상조 코로나19 예방수칙 대한민국 상조의 기준 효담상조는 코로나19 사전 예방을 위하여 아래와 같이 철저한 예방수칙을 시행하고 있습니다. [마스크 착용 의무화/손소독제 비치/방문자 발열체크/임직원 일일 2회 발열체크/의전행사 차랑 방역(소독) 실시/행사 시 위생 장갑 마스크 착용 의무화/국내외 출장 및 교육 최소화] 효담상조의 모든 행사 진행시 고객님의 안전을 위하여 마스크 착용을 의무화 하고 있습니다. 고객 여러분의 안전과 건강을 위하여 최선을 다하겠습니다." />
 				</a>
 				<div class="bottom-wrap">
 					<div class="chk-wrap">
@@ -638,9 +640,9 @@
 					<button class="btn-close" type="button">닫기</button>
 				</div>
 			</div>
-			<div class="main-pop pop02">
+			<div class="today-pop pop02">
 				<a href="">
-					<img src="../../assets/images/visual/main-pop02.png" alt="e효담 무료 가입 고객만을 위한 특별한 혜택 서비스 event [호텔 펜션등 국내,외 숙박시설 최대 60%할인/디지털제품 및 가전과 건강식품 최대 30%할인/기차 예매 최대 35%할인/사전장례 무료 컨설팅 레포트 제공/장례 서비스 이용시 15만원 할인권 제공/장례서비스 이용시 고인 이송 앰뷸런스 무료제공/장례서비스 이용시 영정사진 무료제작]" />
+					<img src="../../assets/images/visual/today-pop02.png" alt="e효담 무료 가입 고객만을 위한 특별한 혜택 서비스 event [호텔 펜션등 국내,외 숙박시설 최대 60%할인/디지털제품 및 가전과 건강식품 최대 30%할인/기차 예매 최대 35%할인/사전장례 무료 컨설팅 레포트 제공/장례 서비스 이용시 15만원 할인권 제공/장례서비스 이용시 고인 이송 앰뷸런스 무료제공/장례서비스 이용시 영정사진 무료제작]" />
 				</a>
 				<div class="bottom-wrap">
 					<div class="chk-wrap">
