--- a/src/html/sub-funeral-performance.html
+++ b/src/html/sub-funeral-performance.html
@@ -44,7 +44,7 @@
 		<nav class="gnb">
 			<ul class="gnb-top">
 				<li>
-					<a href="sub-introduce-greetings.html">회사소개</a>
+					<a class="has-sub" href="sub-introduce-greetings.html">회사소개</a>
 					<ul class="sub-depth">
 						<li><a href="sub-introduce-greetings.html">인사말</a></li>
 						<li><a href="sub-introduce-history.html">연혁</a></li>
@@ -60,7 +60,7 @@
 					<a href="sub-review-list.html">이용후기</a>
 				</li>
 				<li>
-					<a href="sub-funeral-search.html">장례정보</a>
+					<a class="has-sub" href="sub-funeral-search.html">장례정보</a>
 					<ul class="sub-depth">
 						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
 						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
