footer header 통일 가입상담신청 아이콘 변경

--- a/src/html/layer/policy.html
+++ b/src/html/layer/policy.html
@@ -1,6 +1,6 @@
-<article class="popup policy-popup">
+<article class="popup text-popup">
     <h2>개인정보 처리방침</h2>
-    <div class="policy">
+    <div class="text-box">
         <p>
             주식회사 에이플러스라이프(이하 '회사')는 신용정보의 이용 및 보호에 관한 법률, 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 개인정보보호법 등 관련 법규상의 개인정보보호규정을 준수하며,
             개인정보보호법에 의거한 개인정보처리방침을 정하여 이용자 권익보호에 최선을 다하고 있습니다.
