--- a/src/html/perform01.html
+++ b/src/html/perform01.html
@@ -44,7 +44,7 @@
         <nav class="gnb">
             <ul class="gnb-top">
                 <li>
-                    <a href="sub-introduce-greetings.html">회사소개</a>
+                    <a class="has-sub" href="sub-introduce-greetings.html">회사소개</a>
                     <ul class="sub-depth">
                         <li><a href="sub-introduce-greetings.html">인사말</a></li>
                         <li><a href="sub-introduce-history.html">연혁</a></li>
@@ -60,7 +60,7 @@
                     <a href="sub-review-list.html">이용후기</a>
                 </li>
                 <li>
-                    <a href="sub-funeral-search.html">장례정보</a>
+                    <a class="has-sub" href="sub-funeral-search.html">장례정보</a>
                     <ul class="sub-depth">
                         <li><a href="sub-funeral-search.html">장사시설검색</a></li>
                         <li><a href="sub-funeral-after.html">사후행정절차</a></li>
@@ -71,9 +71,9 @@
                 </li>
             </ul>
             <ul class="fnb">
-                <li><a href="#">개인정보처리방침</a></li>
-                <li><a href="#">홈페이지이용약관</a></li>
-                <li><a href="#">이메일무단수집거부</a></li>
+                <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
+                <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
+                <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
                 <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
                 <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
             </ul>
@@ -153,11 +153,11 @@
 
     <footer class="footer">
         <ul class="footer-util">
-            <li><a href="">개인정보처리방침</a></li>
-            <li><a href="">홈페이지이용약관</a></li>
-            <li><a href="">이메일무단수집거부</a></li>
-            <li><a href="">중요정보고시</a></li>
-            <li><a href="">부가서비스</a></li>
+            <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
+            <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
+            <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
         </ul>
         <div class="footer-address">
             <div class="logo">
