--- a/src/html/sub-introduce-noticeview.html
+++ b/src/html/sub-introduce-noticeview.html
@@ -27,62 +27,62 @@
 </head>
 
 <body>
-	<header class="header">
-		<button class="btn-menu" type="button"><span>menu</span></button>
-		<h1 class="logo">
-			<a href="index.html">
-				<span class="white">
-					<img src="../../assets/images/logo/logo-w-hyodam.png" alt="e효담상조" />
-					<img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
-				</span>
-				<span class="black">
-					<img src="../../assets/images/logo/logo-b-hyodam.png" alt="e효담상조" />
-					<img src="../../assets/images/logo/logo-b-aplus.png" alt="A⁺라이프" />
-				</span>
-			</a>
-		</h1>
-		<nav class="gnb">
-			<ul class="gnb-top">
-				<li>
-					<a class="has-sub" href="sub-introduce-greetings.html">회사소개</a>
-					<ul class="sub-depth">
-						<li><a href="sub-introduce-greetings.html">인사말</a></li>
-						<li><a href="sub-introduce-history.html">연혁</a></li>
-						<li><a href="sub-introduce-organization.html">조직도</a></li>
-						<li><a href="sub-introduce-noticelist.html">공지사항</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="sub-product.html">상품안내</a>
-				</li>
-				<li><a href="sub-customer.html">주요고객사</a></li>
-				<li>
-					<a href="sub-review-list.html">이용후기</a>
-				</li>
-				<li>
-					<a class="has-sub" href="sub-funeral-search.html">장례정보</a>
-					<ul class="sub-depth">
-						<li><a href="sub-funeral-search.html">장사시설검색</a></li>
-						<li><a href="sub-funeral-after.html">사후행정절차</a></li>
-						<li><a href="sub-funeral-info.html">종교별장례안내</a></li>
-						<li><a href="sub-funeral-notice.html">부고알림</a></li>
-						<li><a href="sub-funeral-performance.html">장례수행실적</a></li>
-					</ul>
-				</li>
-			</ul>
-			<ul class="fnb">
-				<li><a href="#">개인정보처리방침</a></li>
-				<li><a href="#">홈페이지이용약관</a></li>
-				<li><a href="#">이메일무단수집거부</a></li>
-				<li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
-				<li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
-			</ul>
-		</nav>
-		<ul class="util">
-			<li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-			<li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
-		</ul>
-	</header>
+    <header class="header">
+        <button class="btn-menu" type="button"><span>menu</span></button>
+        <h1 class="logo">
+            <a href="index.html">
+                <span class="white">
+                    <img src="../../assets/images/logo/logo-w-hyodam.png" alt="e효담상조" />
+                    <img src="../../assets/images/logo/logo-w-aplus.png" alt="A⁺라이프" />
+                </span>
+                <span class="black">
+                    <img src="../../assets/images/logo/logo-b-hyodam.png" alt="e효담상조" />
+                    <img src="../../assets/images/logo/logo-b-aplus.png" alt="A⁺라이프" />
+                </span>
+            </a>
+        </h1>
+        <nav class="gnb">
+            <ul class="gnb-top">
+                <li>
+                    <a class="has-sub" href="sub-introduce-greetings.html">회사소개</a>
+                    <ul class="sub-depth">
+                        <li><a href="sub-introduce-greetings.html">인사말</a></li>
+                        <li><a href="sub-introduce-history.html">연혁</a></li>
+                        <li><a href="sub-introduce-organization.html">조직도</a></li>
+                        <li><a href="sub-introduce-noticelist.html">공지사항</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="sub-product.html">상품안내</a>
+                </li>
+                <li><a href="sub-customer.html">주요고객사</a></li>
+                <li>
+                    <a href="sub-review-list.html">이용후기</a>
+                </li>
+                <li>
+                    <a class="has-sub" href="sub-funeral-search.html">장례정보</a>
+                    <ul class="sub-depth">
+                        <li><a href="sub-funeral-search.html">장사시설검색</a></li>
+                        <li><a href="sub-funeral-after.html">사후행정절차</a></li>
+                        <li><a href="sub-funeral-info.html">종교별장례안내</a></li>
+                        <li><a href="sub-funeral-notice.html">부고알림</a></li>
+                        <li><a href="sub-funeral-performance.html">장례수행실적</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="fnb">
+                <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
+                <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
+                <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
+                <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
+                <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
+            </ul>
+        </nav>
+        <ul class="util">
+            <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
+            <li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
+        </ul>
+    </header>
 
     <main class="content-container introduce">
         <header class="visual">
@@ -159,11 +159,11 @@
 
     <footer class="footer">
         <ul class="footer-util">
-            <li><a href="">개인정보처리방침</a></li>
-            <li><a href="">홈페이지이용약관</a></li>
-            <li><a href="">이메일무단수집거부</a></li>
-            <li><a href="">중요정보고시</a></li>
-            <li><a href="">부가서비스</a></li>
+            <li><a href="#" data-pop-name="policy" class="btn-popup">개인정보처리방침</a></li>
+            <li><a href="#" data-pop-name="terms" class="btn-popup">홈페이지이용약관</a></li>
+            <li><a href="#" data-pop-name="email" class="btn-popup">이메일무단수집거부</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/footer/specialInfo.jsp">중요정보고시</a></li>
+            <li><a href="http://www.apluslife.co.kr/newPage2/customer/customer01_01.jsp">부가서비스</a></li>
         </ul>
         <div class="footer-address">
             <div class="logo">
