메인 모바일 1차 피드백 수정

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -350,7 +350,7 @@
             <div class="con-wrap">
                 <header>
                     <h2>이용방법</h2>
-                    <h3>간편하고 편리한 e효담상조만의 장례 서비스</h3>
+                    <h3>간편하고 편리한 <br />e효담상조만의 장례 서비스</h3>
                 </header>
                 <ol>
                     <li class="box01">
@@ -637,7 +637,7 @@
         </div>
     </aside>
     
-    <div class="today-pop-wrap">
+    <div class="today-pop-wrap" style="display: none;">
         <div class="slick-wrapper">
             <div class="today-pop" id="jsToday01">
                 <a href="">
