sub header 모바일 style

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -353,31 +353,31 @@
                     <h3>간편하고 편리한 <br />e효담상조만의 장례 서비스</h3>
                 </header>
                 <ol>
-                    <li class="box01">
+                    <li>
                         <dl>
                             <dt>장례접수</dt>
                             <dd>전화, 문자, 인터넷을 통해 접수</dd>
                         </dl>
                     </li>
-                    <li class="box02">
+                    <li>
                         <dl>
                             <dt>상담원 상담</dt>
                             <dd>365일 24시간 상황실 운영</dd>
                         </dl>
                     </li>
-                    <li class="box03">
+                    <li>
                         <dl>
                             <dt>장례지도사 출동</dt>
                             <dd>최장 3시간 내</dd>
                         </dl>
                     </li>
-                    <li class="box04">
+                    <li>
                         <dl>
                             <dt>장례 절차 안내진행</dt>
                             <dd>장례 행정 안내</dd>
                         </dl>
                     </li>
-                    <li class="box05">
+                    <li>
                         <dl>
                             <dt>발인전 결제</dt>
                             <dd></dd>
@@ -637,7 +637,7 @@
         </div>
     </aside>
     
-    <div class="today-pop-wrap" style="display: none;">
+    <div class="today-pop-wrap">
         <div class="slick-wrapper">
             <div class="today-pop" id="jsToday01">
                 <a href="">
