상품소개 반응형

--- a/src/html/sub-funeral-search.html
+++ b/src/html/sub-funeral-search.html
@@ -136,6 +136,10 @@
                         <input id="tab-title04" type="radio" name="tab-tit" />
                         <label for="tab-title04">자연장</label>
                     </li>
+                    <li>
+                        <input id="tab-title05" type="radio" name="tab-tit" />
+                        <label for="tab-title05">장례식장</label>
+                    </li>
                 </ul>
             </header>
 
@@ -464,6 +468,113 @@
                 <article class="tab-con04">
                     <header>
                         <h3 class="tit-underline">자연장이란?</h3>
+                        <p>화장한 유골의 뼛가루를 나무나 화초, 잔디 아래에 묻는 장례법입니다.</p>
+                    </header>
+                    <div class="search-box">
+                        <input type="text" placeholder="검색어를 입력해주세요." />
+                        <button type="button">검색</button>
+                    </div>
+                    <div class="btn-wrap left">
+                        <select name="" id="">
+                            <option value="전체지역">전체지역</option>
+                            <option value="전체지역">전체지역</option>
+                            <option value="전체지역">전체지역</option>
+                        </select>
+                    </div>
+                    <table class="board-list">
+                        <caption class="blind">자연장 시설 목록</caption>
+                        <colgroup>
+                            <col style="width: 83px;">
+                            <col>
+                            <col>
+                            <col style="width: 15%;">
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th>No.</th>
+                                <th>시설명</th>
+                                <th>주소</th>
+                                <th>전화번호</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                            <tr>
+                                <td>17</td>
+                                <td>거창적십자병원장례식장</td>
+                                <td>경상남도 거창군 거창읍 중앙로 91</td>
+                                <td>055-944-4482</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <ul class="pagination">
+                        <li class="first dimd"><a href="#">처음으로</a></li>
+                        <li class="prev dimd"><a href="#">이전</a></li>
+                        <li class="active"><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                        <li class="next"><a href="#">다음</a></li>
+                        <li class="last"><a href="#">마지막으로</a></li>
+                    </ul>
+                </article>
+                <article class="tab-con05">
+                    <header>
+                        <h3 class="tit-underline">장례식장이란?</h3>
                         <p>화장한 유골의 뼛가루를 나무나 화초, 잔디 아래에 묻는 장례법입니다.</p>
                     </header>
                     <div class="search-box">
