--- a/src/html/sub-product.html
+++ b/src/html/sub-product.html
@@ -181,7 +181,7 @@
                                 <caption class="blind">의전차량 : 고인전용 리무진/문상객용 버스, 앰뷸런스</caption>
                                 <tbody>
                                     <tr>
-                                        <th scope="row">문상객용버스 <br />/ 고인정용 리무진</th>
+                                        <th scope="row">문상객용버스 <br />/ 고인전용 리무진</th>
                                         <td>택1 왕복 200km</td>
                                     </tr>
                                     <tr>
@@ -365,7 +365,7 @@
                 </article>
 
                 <article class="tab-con03">
-                    <h3>전체상품</h3>
+                    <h3 class="blind">전체상품</h3>
                     
                     <dl class="con-info">
                         <dt class="tit-underline">고인용품</dt>
