--- a/src/html/sub-funeral-notice.html
+++ b/src/html/sub-funeral-notice.html
@@ -84,7 +84,7 @@
         </ul>
     </header>
 
-    <main class="content-container funeral">
+    <main class="content-container funeral funeral-notice">
         <header class="visual">
             <div class="visual-wrap">
                 <h2>장례정보</h2>
