--- a/src/html/sub-introduce-history.html
+++ b/src/html/sub-introduce-history.html
@@ -84,7 +84,7 @@
         </ul>
     </header>
 
-    <main class="content-container introduce-history">
+    <main class="content-container introduce introduce-history">
         <header class="visual">
             <div class="visual-wrap">
                 <h2>회사소개</h2>
