장례수행실적 각 상세페이지 링크연결

--- a/src/html/perform12.html
+++ b/src/html/perform12.html
@@ -107,9 +107,9 @@
                             <ul class="depth-list">
                                 <li><a href="sub-funeral-search.html">장사시설검색</a></li>
                                 <li><a href="sub-funeral-after.html">사후행정절차</a></li>
-                                <li class="active"><a href="sub-funeral-info.html">종교별장례안내</a></li>
+                                <li><a href="sub-funeral-info.html">종교별장례안내</a></li>
                                 <li><a href="sub-funeral-notice.html">부고알림</a></li>
-                                <li><a href="sub-funeral-performance.html">장례수행실적</a></li>
+                                <li class="active"><a href="sub-funeral-performance.html">장례수행실적</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -137,11 +137,11 @@
                 <div class="pagination-view">
                     <dl class="prev">
                         <dt>이전글</dt>
-                        <dd>다음글이 없습니다.</dd>
+                        <dd><a href="perform11.html">故신명수님의 장례수행</a></dd>
                     </dl>
                     <dl class="next">
                         <dt>다음글</dt>
-                        <dd><a href="perform02.html">故김덕인님의 장례수행</a></dd>
+                        <dd><a href="perform13.html">故정형식님의 장례수행</a></dd>
                     </dl>
                 </div>
                 <div class="btn-wrap center">
