메인 모바일 수정

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -264,7 +264,7 @@
                 <header>
                     <h2>e효담상조 차별화 서비스 02</h2>
                     <h3>메뉴판 서비스</h3>
-                    <p>불필요한 식사 제공을 방지하여, 버려지는 음식을 줄이고 <br /><strong>접대식사비를 크게 절감해드리는 e효담만의 특화서비스</strong></p>
+                    <p>불필요한 식사 제공을 방지하여,<br /> 버려지는 음식을 줄이고 <br /><strong>접대식사비를 크게 절감해드리는 e효담만의 특화서비스</strong></p>
                     <dl>
                         <dt>메뉴판 서비스 이용 효과</dt>
                         <dd>전체 장례비용 중 가장 큰 비중은 식사 접대 (약 40~70% 차지)<br />
