모바일 스타일 작업

--- a/src/html/sub-funeral-after.html
+++ b/src/html/sub-funeral-after.html
@@ -174,7 +174,7 @@
                     </dl>
 
                     <dl class="con-info">
-                        <dt class="tit-underline">진단서 또는 검안서르 첨부 못할 경우</dt>
+                        <dt class="tit-underline">진단서 또는 검안서를 첨부 못할 경우</dt>
                         <dd>
                            사망사실을 알고 있는 동장, 이장 또는 이웃 2명이 작성한 인우 보증서를 제출합니다.
                            (이때 이웃의 주민등록등본 또는 초본과 주민등록 사본과 인감증명이 필요합니다.)
@@ -325,8 +325,8 @@
                                     </tr>
                                     <tr>
                                         <td>
-                                            자택에서 사망 시 사망진단서 기본 5부
-                                            (보증인 2인-통장, 동장)
+                                            자택에서 사망<br />
+                                            사망진단서 기본 5부 (보증인 2인-통장, 동장)
                                         </td>
                                         <td class="center">고인거주시 동사무소</td>
                                         <td>관할경찰서에 신고하여 검찰에서<br /> 심의 후 발급</td>
