--- a/src/html/index.html
+++ b/src/html/index.html
@@ -82,7 +82,7 @@
         </nav>
         <ul class="util">
             <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-            <li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
+            <li><a class="info-link" target="_blank" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
         </ul>
     </header>
 
@@ -112,7 +112,7 @@
                                     <input type="checkbox" id="chk-agree" />
                                     <label for="chk-agree">개인정보처리방침에 동의합니다.</label>
                                 </div>
-                                <button type="button">약관보기</button>
+                                <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
                             </div>
                             <button class="btn-red" type="submit">상담신청</button>
                         </form>
@@ -198,7 +198,7 @@
             <div class="achievements-list con-wrap">
                 <ul class="">
                     <li>
-                        <a href="#">
+                        <a href="#" data-pop-name="achievements1" class="btn-popup">
                             <img src="../../assets/images/icon/icon-main-achievements1.png" alt="">
                             <span><em>2012년 2월 업계 최초</em><br /><strong>5대 품질 보증제 시행</strong></span>
                         </a>
@@ -609,7 +609,7 @@
                             <input type="checkbox" id="fix-chk-agree" />
                             <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
                         </div>
-                        <button type="button">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
