--- a/src/html/sub-funeral-search.html
+++ b/src/html/sub-funeral-search.html
@@ -80,7 +80,7 @@
         </nav>
         <ul class="util">
             <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-            <li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
+            <li><a class="info-link" target="_blank" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
         </ul>
     </header>
     
@@ -147,7 +147,7 @@
                 <article class="tab-con01">
                     <header>
                         <h3 class="tit-underline">장례식장이란?</h3>
-                        <p>화장한 유골의 뼛가루를 나무나 화초, 잔디 아래에 묻는 장례법입니다.</p>
+                        <p>죽은 사람의 장례 의식을 거행하는 장소 입니다.</p>
                     </header>
                     <div class="search-box">
                         <input type="text" placeholder="검색어를 입력해주세요." />
@@ -732,7 +732,7 @@
                             <input type="checkbox" id="fix-chk-agree" />
                             <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
                         </div>
-                        <button type="button">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
