--- a/src/html/sub-review-list.html
+++ b/src/html/sub-review-list.html
@@ -80,7 +80,7 @@
         </nav>
         <ul class="util">
             <li><a class="call-link" href="tel:1688-8890"><em>전국긴급출동 24시간</em><strong>1688-8890</strong></a></li>
-            <li><a class="info-link" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
+            <li><a class="info-link" target="_blank" href="http://www.ehaneul.go.kr/portal/index.do">e하늘 장사정보</a></li>
         </ul>
     </header>
 
@@ -272,7 +272,7 @@
                             <input type="checkbox" id="fix-chk-agree" />
                             <label for="fix-chk-agree">개인정보처리방침에 동의합니다.</label>
                         </div>
-                        <button type="button">약관보기</button>
+                        <button type="button" data-pop-name="policy" class="btn-popup">약관보기</button>
                     </div>
                     <button class="btn-red" type="submit">상담신청</button>
                 </form>
