버튼 가입상담신청 > 상담신청

--- a/src/html/sub-review-list.html
+++ b/src/html/sub-review-list.html
@@ -248,7 +248,7 @@
 
     <!-- fix 가입상담신청 폼 -->
     <aside class="aside-consulting fix-aside">
-        <button class="btn-consulting" type="button" title="가입상담신청">가입상담신청</button>
+        <button class="btn-consulting" type="button" title="상담신청">상담신청</button>
         <div class="consulting-con">
             <div class="consulting-form">
                 <h2>가입상담신청</h2>
