--- a/src/html/index.html
+++ b/src/html/index.html
@@ -107,6 +107,14 @@
                                     <option value="">09:00 ~ 10:00</option>
                                 </select>
                             </div>
+                            <div>
+                                <label for="u-question">상담내용</label>
+                                <select name="question" id="u-question">
+                                    <option value="">선택</option>
+                                    <option value="">회사 및 상품문의</option>
+                                    <option value="">장례관련문의</option>
+                                </select>
+                            </div>
                             <div class="chk-agree">
                                 <div>
                                     <input type="checkbox" id="chk-agree" />
